--- a/index.html
+++ b/index.html
@@ -3,111 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THEGLAMAX // CORE_ACCESS</title>
+    <title>THEGLAMAX | PRIVATE_ACCESS</title>
     <style>
         :root {
-            --neon: #ff00ff; /* Маджента / Розовый неон */
-            --bg: #050505;
+            --accent: #00f2ff; /* Дорогой неоновый голубой */
+            --accent-pink: #ff00c8; /* Глубокий розовый для акцентов */
+            --bg: #0a0a0c;
         }
         body {
-            background-color: var(--bg);
-            color: var(--neon);
-            font-family: 'Consolas', 'Courier New', monospace;
+            background: radial-gradient(circle at center, #1a1a2e 0%, var(--bg) 100%);
+            color: #e0e0e0;
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100vh;
             margin: 0;
             overflow: hidden;
-            text-shadow: 0 0 10px rgba(255, 0, 255, 0.7);
         }
-        #terminal {
-            width: 85%;
-            max-width: 700px;
-            border-left: 3px solid var(--neon);
-            padding: 40px;
-            background: rgba(255, 0, 255, 0.02);
-            box-shadow: -10px 0 30px rgba(255, 0, 255, 0.1);
+        #glass-panel {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            padding: 50px;
+            width: 80%;
+            max-width: 600px;
+            box-shadow: 0 25px 50px rgba(0,0,0,0.5), inset 0 0 20px rgba(255,255,255,0.02);
+            position: relative;
         }
-        .line {
-            font-size: 22px;
-            font-weight: 800;
-            margin-bottom: 12px;
-            letter-spacing: 1px;
-            min-height: 24px;
+        #glass-panel::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; right: 0; height: 2px;
+            background: linear-gradient(90deg, transparent, var(--accent), var(--accent-pink), transparent);
         }
-        .system { color: #00ffff; font-size: 14px; text-transform: uppercase; opacity: 0.8; }
-        .tg-btn {
-            display: none;
-            margin-top: 40px;
-            padding: 15px 40px;
-            border: 2px solid var(--neon);
-            color: var(--neon);
-            text-decoration: none;
+        #output {
+            font-family: 'Courier New', monospace;
             font-size: 20px;
+            line-height: 1.6;
+            min-height: 300px;
+            color: #fff;
+            text-shadow: 0 0 5px rgba(255,255,255,0.3);
+        }
+        .system-text {
+            color: var(--accent);
+            font-size: 12px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+            opacity: 0.7;
+        }
+        .tg-btn {
+            display: inline-block;
+            margin-top: 30px;
+            padding: 18px 45px;
+            background: transparent;
+            border: 1px solid var(--accent);
+            color: var(--accent);
+            text-decoration: none;
+            font-size: 14px;
             font-weight: bold;
             text-transform: uppercase;
-            letter-spacing: 4px;
-            transition: 0.3s;
-            position: relative;
-            background: transparent;
+            letter-spacing: 3px;
+            border-radius: 50px;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        .tg-btn.active {
+            opacity: 1;
+            transform: translateY(0);
         }
         .tg-btn:hover {
-            background: var(--neon);
+            background: var(--accent);
             color: #000;
-            box-shadow: 0 0 50px var(--neon);
-            transform: scale(1.05);
-        }
-        .glitch { animation: glitch 2s infinite; }
-        @keyframes glitch {
-            0% { transform: skew(0deg); }
-            1% { transform: skew(10deg); opacity: 0.7; }
-            2% { transform: skew(-10deg); opacity: 1; }
-            3% { transform: skew(0deg); }
+            box-shadow: 0 0 30px var(--accent);
+            letter-spacing: 5px;
         }
     </style>
 </head>
 <body>
-    <div id="terminal">
-        <div class="system glitch">>>> incoming_signal... success</div>
-        <div class="system">>>> protocol: tea_time_v2.0</div>
-        <hr style="border: 0.5px solid #333; margin: 20px 0;">
+    <div id="glass-panel">
+        <div class="system-text">Secure connection established // node_id: theglamax</div>
         <div id="output"></div>
-        <a href="https://t.me/theglamax" id="btn" class="tg-btn">Initialize tea_protocol</a>
+        <a href="https://t.me/theglamax" id="btn" class="tg-btn">Связаться</a>
     </div>
 
 <script>
-    const text = [
+    const content = [
+        "Initializing neural link...",
+        "Decryption complete.",
+        " ",
         "Я программист. Мой мир — нули и единицы,",
         "Я дебажу всю жизнь, не смыкая ресницы.",
         "Но тут я увидел тебя... и завис,",
         "Система поплыла, пошел синий вис!",
         " ",
-        "Я стих сочинял, как дурак, полнедели,",
-        "Но вышли лишь баги (они надоели).",
-        "Я не Есенин, мой слог — как костыль,",
-        "Зато я не спам и не скучный утиль!",
-        " ",
         "Давай пить чай? Это проще, чем код.",
         "Ты просто классная. Это мой лог."
     ];
-    let l = 0, i = 0;
-    const out = document.getElementById('output');
-    function type() {
-        if (l < text.length) {
-            if (i < text[l].length) {
-                out.innerHTML += text[l].charAt(i);
-                i++; setTimeout(type, 35);
+
+    let line = 0, char = 0;
+    const box = document.getElementById('output');
+
+    function print() {
+        if (line < content.length) {
+            if (char < content[line].length) {
+                box.innerHTML += content[line].charAt(char);
+                char++;
+                setTimeout(print, 30);
             } else {
-                out.innerHTML += "<br>";
-                l++; i = 0; setTimeout(type, 600);
+                box.innerHTML += "<br>";
+                line++;
+                char = 0;
+                setTimeout(print, 600);
             }
         } else {
-            const btn = document.getElementById('btn');
-            btn.style.display = 'inline-block';
+            document.getElementById('btn').classList.add('active');
         }
     }
-    window.onload = type;
+    window.onload = print;
 </script>
 </body>
 </html>
