--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THEGLAMAX | PRIVATE_ACCESS</title>
+    <title>Специальное послание ✨</title>
     <style>
-        :root {
-            --accent: #00f2ff; /* Дорогой неоновый голубой */
-            --accent-pink: #ff00c8; /* Глубокий розовый для акцентов */
-            --bg: #0a0a0c;
-        }
         body {
-            background: radial-gradient(circle at center, #1a1a2e 0%, var(--bg) 100%);
-            color: #e0e0e0;
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            background: #fffafa;
+            color: #333;
+            font-family: -apple-system, system-ui, sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -21,110 +16,102 @@
             margin: 0;
             overflow: hidden;
         }
-        #glass-panel {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(15px);
-            -webkit-backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 50px;
-            width: 80%;
+        #container {
+            text-align: center;
+            padding: 30px;
             max-width: 600px;
-            box-shadow: 0 25px 50px rgba(0,0,0,0.5), inset 0 0 20px rgba(255,255,255,0.02);
-            position: relative;
+            width: 90%;
         }
-        #glass-panel::before {
-            content: "";
-            position: absolute;
-            top: 0; left: 0; right: 0; height: 2px;
-            background: linear-gradient(90deg, transparent, var(--accent), var(--accent-pink), transparent);
-        }
-        #output {
-            font-family: 'Courier New', monospace;
-            font-size: 20px;
+        #text-box {
+            font-size: 22px;
             line-height: 1.6;
-            min-height: 300px;
-            color: #fff;
-            text-shadow: 0 0 5px rgba(255,255,255,0.3);
+            min-height: 200px;
+            font-weight: 500;
+            color: #444;
         }
-        .system-text {
-            color: var(--accent);
-            font-size: 12px;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            margin-bottom: 20px;
-            opacity: 0.7;
+        .highlight {
+            color: #ff4d6d;
+            font-weight: 700;
         }
         .tg-btn {
-            display: inline-block;
-            margin-top: 30px;
+            display: none;
+            margin-top: 40px;
             padding: 18px 45px;
-            background: transparent;
-            border: 1px solid var(--accent);
-            color: var(--accent);
+            background: #ff4d6d;
+            color: white;
             text-decoration: none;
-            font-size: 14px;
+            border-radius: 100px;
             font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            border-radius: 50px;
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            opacity: 0;
-            transform: translateY(20px);
+            font-size: 18px;
+            box-shadow: 0 10px 25px rgba(255, 77, 109, 0.4);
+            transition: 0.3s;
+            animation: pop 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48);
         }
-        .tg-btn.active {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .tg-btn:hover {
-            background: var(--accent);
-            color: #000;
-            box-shadow: 0 0 30px var(--accent);
-            letter-spacing: 5px;
-        }
+        @keyframes pop { from { transform: scale(0); } to { transform: scale(1); } }
+        .tg-btn:hover { transform: scale(1.05); background: #ff335c; }
+        
+        /* Декор */
+        .cursor { display: inline-block; width: 3px; height: 24px; background: #ff4d6d; margin-left: 5px; animation: blink 0.8s infinite; }
+        @keyframes blink { 50% { opacity: 0; } }
     </style>
 </head>
 <body>
-    <div id="glass-panel">
-        <div class="system-text">Secure connection established // node_id: theglamax</div>
-        <div id="output"></div>
-        <a href="https://t.me/theglamax" id="btn" class="tg-btn">Связаться</a>
+    <div id="container">
+        <div id="text-box"></div>
+        <a href="https://t.me/theglamax" id="btn" class="tg-btn">Сдаться и пойти пить чай ☕️</a>
     </div>
 
 <script>
     const content = [
-        "Initializing neural link...",
-        "Decryption complete.",
+        "Слушай...",
+        "Я тут полдня воевал с этим кодом. 👨‍💻",
+        "Гитхаб ругался, сервер падал, ",
+        "я чуть не разбил макбук...",
+        "И всё ради того, чтобы ты увидела эти строки.",
         " ",
-        "Я программист. Мой мир — нули и единицы,",
-        "Я дебажу всю жизнь, не смыкая ресницы.",
-        "Но тут я увидел тебя... и завис,",
-        "Система поплыла, пошел синий вис!",
+        "Я мог бы просто прислать мем,",
+        "или написать обычное «Привет».",
+        "Но ты <span class='highlight'>слишком особенная</span> для обычных «Привет». ✨",
         " ",
-        "Давай пить чай? Это проще, чем код.",
-        "Ты просто классная. Это мой лог."
+        "Поэтому вот мой костыльный, но искренний план:",
+        "1. Ты улыбаешься (надеюсь, это сработало).",
+        "2. Ты нажимаешь кнопку ниже.",
+        "3. Мы идем пить самый вкусный чай в городе.",
+        " ",
+        "Что скажешь?"
     ];
 
-    let line = 0, char = 0;
-    const box = document.getElementById('output');
+    let l = 0, i = 0;
+    const box = document.getElementById('text-box');
 
-    function print() {
-        if (line < content.length) {
-            if (char < content[line].length) {
-                box.innerHTML += content[line].charAt(char);
-                char++;
-                setTimeout(print, 30);
+    function type() {
+        if (l < content.length) {
+            if (i < content[l].length) {
+                // Обработка HTML тегов внутри строк
+                if (content[l].charAt(i) === '<') {
+                    let tag = "";
+                    while (content[l].charAt(i) !== '>') {
+                        tag += content[l].charAt(i);
+                        i++;
+                    }
+                    tag += '>';
+                    box.innerHTML += tag;
+                    i++;
+                }
+                box.innerHTML += content[l].charAt(i);
+                i++; setTimeout(type, 40);
             } else {
                 box.innerHTML += "<br>";
-                line++;
-                char = 0;
-                setTimeout(print, 600);
+                l++; i = 0; 
+                // Пауза после важных фраз
+                let delay = content[l-1].length > 1 ? 800 : 300;
+                setTimeout(type, delay);
             }
         } else {
-            document.getElementById('btn').classList.add('active');
+            document.getElementById('btn').style.display = 'inline-block';
         }
     }
-    window.onload = print;
+    window.onload = type;
 </script>
 </body>
 </html>
