--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         } else {
             document.getElementById('btn').style.display = 'inline-block';
         }
-    }
     window.onload = type;
 </script>
 </body>
 </html>
+google-site-verification: google3179575ac079c9b3.html
