--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="TQMGcpGXsVXVjMKoIYVFxl8PUltmQ9u1vn1dqPogAUE" />
-    <title>THEGLAMAX</title>
+    <title>THEGLAMAX2026</title>
     <style>
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         
