--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
 <script>
     const poem = [
+        THEGLAMAX2026 
         "Слушай сюда, <span class='accent'>внимательно и в упор:</span>",
         "Я забиваю на скуку и <span class='accent'>весь этот сор.</span>",
         " ",
